crates/org-edit/tests/snapshots/snapshots__todo_bogus.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
#+STARTUP: logdone
#+TODO: TODO WAIT(w@) | DONE
* Parent [0/1]
** TODO Task‸
SCHEDULED: <2026-09-21 Mon +1w>

----
error: State `BOGUS' not valid in this file
