crates/org-edit/tests/snapshots/snapshots__todo_done_repeats.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
#+STARTUP: logdone
#+TODO: TODO WAIT(w@) | DONE
* Parent [0/1]
** TODO Task‸
SCHEDULED: <2026-09-21 Mon +1w>

----
#+STARTUP: logdone
#+TODO: TODO WAIT(w@) | DONE
* Parent [0/1]
** TODO Task‸
SCHEDULED: <2026-09-28 Mon +1w>
:PROPERTIES:
:LAST_REPEAT: [2026-09-28 Mon 10:00]
:END:
- State "DONE"       from "TODO"       [2026-09-28 Mon 10:00]
