crates/org-edit/tests/snapshots/snapshots__toggle_bold_off.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
a *⁁word‸* b

----
a word‸ b
