crates/org-edit/tests/snapshots/snapshots__toggle_checkbox.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
- [ ] one
- [X] two‸
  - sub
- three

----
- [ ] one
- [ ] two‸
  - sub
- three
